Fix: Add flex-wrap to header and form

--- a/src/main.css
+++ b/src/main.css
@@ -87,6 +87,7 @@ li input {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .add-item-form input {
